advanced admin panel

--- a/src/main/resources/text.properties
+++ b/src/main/resources/text.properties
@@ -10,7 +10,9 @@ index.showrooms=Showrooms:
 login.login=Log in
 general.email=Email
 general.password=Password
+general.password-repeat=Password confirmation
 register.register=Register
+register.password-info=Password should be between 6 and 40 symbols and contain only latin symbols, numbers or '_'
 tickets.ticket_list=Your tickets list:
 tickets.ticket=Ticket
 ticket.ticket_email=Ticket email
@@ -31,4 +33,4 @@ buy.payment.buy_ticket=Buy ticket
 buy.payment.success.caption=You have bought a ticket successfully!
 buy.payment.success.information=Information:
 admin.welcome=Welcome to admin panel!
-admin.users_list=All users list:
+admin.users_list=All users list
