--- a/src/main/resources/text.properties
+++ b/src/main/resources/text.properties
@@ -34,3 +34,32 @@ buy.payment.success.caption=You have bought a ticket successfully!
 buy.payment.success.information=Information:
 admin.welcome=Welcome to admin panel!
 admin.users_list=All users list
+error.user.email.notnull=Email can't be null
+error.user.email.pattern=Invalid email
+error.user.password.notnull=Password can't be null
+error.user.password.size=Password should contain at least 6 and at most 40 symbols
+error.user.password.pattern=Password can contain only latin symbols, numbers and _
+error.user.role.notnull=Role can't be null
+error.ticket.date.notnull=You should specify the exhibition date
+error.ticket.date.date=You can't order a ticket for the past
+error.ticket.theme.notnull=There are no such exhibition theme
+error.payment.price.notnull=Price can't be null
+error.payment.name.notnull=Name can't be null
+error.payment.name.size=Name is too short
+error.payment.name.pattern=Invalid name
+error.payment.surname.notnull=Surname can't be null
+error.payment.surname.size=Surname is too short
+error.payment.surname.pattern=Invalid surname
+exception.login.email=There are no user with specified email
+exception.login.password=Password is wrong
+exception.register.email=User with specified email is already registered
+exception.finduser.id=No user with specified id exists
+exception.showroom.name=No showroom with such name exists
+ban.banned=Your account has been banned.
+maintenance.unavailable=Sorry, but this service is currently unavailable.
+maintenance.try_later=Please try later.
+exception.passwords_match=Passwords don't match
+showroom.showroom=Showroom
+showroom.exhibits=Exhibits:
+showroom.Theme=Theme:
+general.wrong_data=Wrong data, please fill correctly
